--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
@@ -3,7 +3,6 @@ slug: /155
 title: "React Hebdo #155: RSC DevTools, Next.js Caching, Radix Themes, Expo Party, Graph Gallery, Astro, Apollo, Storybook, Remix, Reanimated, Apple Settings, Stable Diffusion..."
 authors: [slorber]
 date: 08-08-2023
-unlisted: true
 ---
 
 Salut à tous !
@@ -101,7 +100,7 @@ Radix UI est une librairie React headless qui reçoit beaucoup d'éloge dernièr
 - 📦 [Next.js Commerce 2.0](https://vercel.com/blog/introducing-next-js-commerce-2-0): template e-commerce avec support App Router proposé par Vercel, avec une intégration officielle Shopify. Article détaillé qui explique comment ce template arrive à obtenir d'excellentes performances.
 - 📦 [Apollo Client 3.8 - React Suspense Integration](https://www.apollographql.com/blog/announcement/frontend/wait-for-it-announcing-apollo-client-3-8-with-react-suspense-integration/): diverses nouveautés, dont 3 nouveaux hooks disponible pour s'intégrer avec Suspense et un Link pour retirer le `__typename` GraphQL. https://twitter.com/apollographql/status/1688593522717589504
 - 📦 [Storybook - Visual Tests addon sneak peek - using Chromatic](https://storybook.js.org/blog/visual-tests-addon-sneak-peek/)
-- 📦 [Remix Dev Tools v2.0](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v2.0.0) https://twitter.com/AlemTuzlak59192/status/1687434730587701249
+- 📦 [Remix Dev Tools v2.0 - New settings tab](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v2.0.0) https://twitter.com/AlemTuzlak59192/status/1687434730587701249
 - 📦 [Remix-Workers-POC - Run loaders/actions in a Service Workers, enable offline-first support](https://github.com/scandinavianairlines/remix-workers-poc)
 - 🎥 [HTMX: The Game-Changing Alternative to React](https://www.youtube.com/watch?v=DuGyH5RvfbY)
 - 🎥 [What's new in Remotion – July 2023](https://www.youtube.com/watch?v=ABQErIOxUNg)
@@ -141,6 +140,7 @@ Cette semaine, Expo compte nous annoncer de nombreuses nouveautés. Pour le mome
 
 - 💬 [Help us Kotlin-ify React Native tests - Round 2](https://github.com/facebook/react-native/issues/38825): les devs React-Native nous proposent une nouvelle fois de contribuer à l'effort de conversion de Java vers Kotlin.
 - 🐦 [Upcoming support for Reanimated worklets background tasks?](https://twitter.com/tomekzaw_/status/1688565879456350208)
+- 🐦 [Wishlist Update - Launching soon](https://twitter.com/margelo_io/status/1689270087583195136)
 - 📜 [Rust in React Native](https://ospfranco.notion.site/Rust-in-React-Native-43316cdc499f43b48e9bc014074d3f72): article et tutoriel video pour intégrer Rust dans une app React-Native.
 - 📜 [How to Create AI-Generated Images on iOS in React Native Using Stable Diffusion](https://andreizgirvaci.com/blog/how-to-create-ai-generated-images-on-ios-in-react-native-using-stable-diffusion): Andrei explique comment vous pouvez générer des images AI directement depuis votre iPhone avec son nouveau package [Expo-Stable-Diffusion](https://github.com/andrei-zgirvaci/expo-stable-diffusion).
 - 📦 [Expo Config Plugins - Apple Settings](https://github.com/expo/config-plugins/tree/main/packages/apple-settings) https://twitter.com/Baconbrix/status/1688203281716125696
