--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
@@ -71,10 +71,6 @@ Une nouvelle page de documentation Next.js explique de manière très exhaustive
 
 Il n'est pas possible de bypasser le Router cache: un problème dénoncé dans [cette video](https://www.youtube.com/watch?v=_yhSh4g0NSk).
 
-https://twitter.com/delba_oliveira/status/1687131292520071169
-
-https://twitter.com/jherr/status/1687496301670436864
-
 ---
 
 [![Radix UI Themes](/emails/issues/155/radix.jpg)](https://www.radix-ui.com/)
@@ -96,11 +92,11 @@ Radix UI est une librairie React headless qui reçoit beaucoup d'éloge dernièr
 - 📜 [Building an email automation system with React Flow and Resend](https://novu.co/blog/building-an-email-automation-system-with-react-flow-and-resend/)
 - 📜 [Markprompt + Algolia: combining prompts with instant search for docs](https://markprompt.com/blog/algolia)
 - 📜 [Forging Leptos Query - TanStack Query in Rust](https://www.nicoburniske.com/thoughts/forging_leptos_query)
-- 📦 [Astro 2.10: Persistent State in View Transitions](https://astro.build/blog/astro-2100/): Astro repousse de plus en plus ses limites, avec la possibilité de persister le state sur les islands stateful. Astro v3 est en beta. https://twitter.com/astrodotbuild/status/1687169909699268614 + v3 beta: https://twitter.com/astrodotbuild/status/1687523994025832448
+- 📦 [Astro 2.10: Persistent State in View Transitions](https://astro.build/blog/astro-2100/): Astro repousse de plus en plus ses limites, avec la possibilité de persister le state sur les islands stateful. Astro v3 est en beta.
 - 📦 [Next.js Commerce 2.0](https://vercel.com/blog/introducing-next-js-commerce-2-0): template e-commerce avec support App Router proposé par Vercel, avec une intégration officielle Shopify. Article détaillé qui explique comment ce template arrive à obtenir d'excellentes performances.
-- 📦 [Apollo Client 3.8 - React Suspense Integration](https://www.apollographql.com/blog/announcement/frontend/wait-for-it-announcing-apollo-client-3-8-with-react-suspense-integration/): diverses nouveautés, dont 3 nouveaux hooks disponible pour s'intégrer avec Suspense et un Link pour retirer le `__typename` GraphQL. https://twitter.com/apollographql/status/1688593522717589504
+- 📦 [Apollo Client 3.8 - React Suspense Integration](https://www.apollographql.com/blog/announcement/frontend/wait-for-it-announcing-apollo-client-3-8-with-react-suspense-integration/): diverses nouveautés, dont 3 nouveaux hooks disponible pour s'intégrer avec Suspense et un Link pour retirer le `__typename` GraphQL.
 - 📦 [Storybook - Visual Tests addon sneak peek - using Chromatic](https://storybook.js.org/blog/visual-tests-addon-sneak-peek/)
-- 📦 [Remix Dev Tools v2.0 - New settings tab](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v2.0.0) https://twitter.com/AlemTuzlak59192/status/1687434730587701249
+- 📦 [Remix Dev Tools v2.0 - New settings tab](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v2.0.0)
 - 📦 [Remix-Workers-POC - Run loaders/actions in a Service Workers, enable offline-first support](https://github.com/scandinavianairlines/remix-workers-poc)
 - 🎥 [HTMX: The Game-Changing Alternative to React](https://www.youtube.com/watch?v=DuGyH5RvfbY)
 - 🎥 [What's new in Remotion – July 2023](https://www.youtube.com/watch?v=ABQErIOxUNg)
@@ -132,8 +128,8 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 Cette semaine, Expo compte nous annoncer de nombreuses nouveautés. Pour le moment, nous avons:
 
 - [Feature Preview: Single Sign-On (SSO)](https://blog.expo.dev/feature-preview-single-sign-on-sso-9c1a7d50c1a9)
-- [Feature Preview: Rollouts for EAS Update](https://blog.expo.dev/feature-preview-rollouts-for-eas-update-4eac28596470) https://twitter.com/expo/status/1688905053900525568
-- [useUpdates() API for expo-updates](https://expo.dev/changelog/2023/08-08-use-updates-api) https://twitter.com/expo/status/1688912315977220097
+- [Feature Preview: Rollouts for EAS Update](https://blog.expo.dev/feature-preview-rollouts-for-eas-update-4eac28596470)
+- [useUpdates() API for expo-updates](https://expo.dev/changelog/2023/08-08-use-updates-api)
 - [Expo Orbit: Download and launch builds](https://expo.dev/changelog/2023/08-09-orbit)
 
 ---
@@ -143,8 +139,8 @@ Cette semaine, Expo compte nous annoncer de nombreuses nouveautés. Pour le mome
 - 🐦 [Wishlist Update - Launching soon](https://twitter.com/margelo_io/status/1689270087583195136)
 - 📜 [Rust in React Native](https://ospfranco.notion.site/Rust-in-React-Native-43316cdc499f43b48e9bc014074d3f72): article et tutoriel video pour intégrer Rust dans une app React-Native.
 - 📜 [How to Create AI-Generated Images on iOS in React Native Using Stable Diffusion](https://andreizgirvaci.com/blog/how-to-create-ai-generated-images-on-ios-in-react-native-using-stable-diffusion): Andrei explique comment vous pouvez générer des images AI directement depuis votre iPhone avec son nouveau package [Expo-Stable-Diffusion](https://github.com/andrei-zgirvaci/expo-stable-diffusion).
-- 📦 [Expo Config Plugins - Apple Settings](https://github.com/expo/config-plugins/tree/main/packages/apple-settings) https://twitter.com/Baconbrix/status/1688203281716125696
-- 📦 [React-Native Testing Library v12.2.0 - New User Event API](https://callstack.github.io/react-native-testing-library/docs/user-event) https://twitter.com/mdj_dev/status/1687417446515261440
+- 📦 [Expo Config Plugins - Apple Settings](https://github.com/expo/config-plugins/tree/main/packages/apple-settings)
+- 📦 [React-Native Testing Library v12.2.0 - New User Event API](https://callstack.github.io/react-native-testing-library/docs/user-event)
 - 📦 [React-Native-Wireframe-UI - Wireframe UI kit for React Native](https://github.com/rborn/react-native-wireframe-ui)
 - 📦 [React-Native-Bootsplash v5 beta - Bye AndroidX, dark mode + brand image support, useHideAnimation hook, etc](https://github.com/zoontek/react-native-bootsplash/pull/475)
 - 🎥 [Make or port your SDK to react native](https://www.youtube.com/watch?v=A0JtWXt75yw)
@@ -177,7 +173,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 [![Premier Octet](/emails/issues/151/premieroctet.png)](https://www.premieroctet.com/?utm_source=react_hebdo)
 
-💸 [**Premier Octet - Agence de développement React**](https://www.premieroctet.com/?utm_source=react_hebdo)\*\*
+💸 [**Premier Octet - Agence de développement React**](https://www.premieroctet.com/?utm_source=react_hebdo)
 
 Agence parisienne fondée en 2018 par une équipe de passionnés, nous accompagnons de nombreux clients grâce à notre expertise React et React Native.
 Nous intervenons en développement, conseil, audit ou formation, sur des thématiques JavaScript serveur et front.
