--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
@@ -8,6 +8,10 @@ unlisted: true
 
 Salut à tous !
 
+Retire job section
+
+RN EU cross-promo
+
 <Todo />
 
 <!-- truncate -->
@@ -41,7 +45,9 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Things you forgot (or never knew) because of React](https://joshcollinsworth.com/blog/antiquated-react)
+- [Fantastic closures and how to find them in React](https://www.developerway.com/posts/fantastic-closures)
+- [Reakit - August 2023 update](https://newsletter.ariakit.org/p/all-things)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -66,7 +72,8 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-- 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, September 7–8, 2023) is offering us [-15% on conference tickets](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) with code "thisweekinreact15".
+- [Use Genymotion SaaS to run Maestro E2E on CI](https://dev.to/retyui/use-genymotion-saas-to-run-maestro-e2e-on-ci-14hm)
+- 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, 7–8 September 2023) nous offre [-15% sur la conférence](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) avec le code "thisweekinreact15".
 
 ---
 
