--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
@@ -45,11 +45,22 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
+- [Natuerlich](https://github.com/coconut-xr/natuerlich) + https://twitter.com/coconut_xr/status/1689600319259357184
+- [On React Suspense’s throttling](https://andreigatej.dev/blog/on-react-suspense-throttling/) ???
+- 💸 [Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+- [Introducing a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-07-31-a-new-rtl-lint-rule/) + [Building a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-08-01-building-a-new-lint-rule-for-rtl/)
+- [The simplest example to understand Server Actions in Next.js](https://scastiel.dev/simplest-example-server-actions-nextjs)
+- [How to Use Jotai and useTransition for Mutation](https://blog.axlight.com/posts/how-to-use-jotai-and-use-transition-for-mutation/)
+- [Coding the stars - an interactive constellation with Three.js and React Three Fiber](https://supabase.com/blog/interactive-constellation-threejs-react-three-fiber)
+- [Lifting Off with Astro](https://remotesynthesis.com/blog/lifting-off-with-astro/)
+- [React.dev - Using TypeScript](https://react.dev/learn/typescript): nouvelle page officielle de documentation.
 - [Things you forgot (or never knew) because of React](https://joshcollinsworth.com/blog/antiquated-react)
 - [Fantastic closures and how to find them in React](https://www.developerway.com/posts/fantastic-closures)
 - [Reakit - August 2023 update](https://newsletter.ariakit.org/p/all-things)
+- [Why I Stopped Using Next.js And Chose Astro Instead](https://www.youtube.com/watch?v=BoeZqPaYw9s)
+- [Responsive Framer Motion with Tailwind CSS](https://www.youtube.com/watch?v=xSuxsfn13xg)
 
-<SubscribeFormEmbed placement="middle" />
+  <SubscribeFormEmbed placement="middle" />
 
 ---
 
@@ -72,8 +83,15 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
+- [Exploring React Native's New Architecture: A Peek into the New Architecture](https://blog.devvivek.tech/exploring-react-natives-new-architecture-a-peek-into-the-new-architecture) + https://twitter.com/theviveksuthar
+- [Expo Preview - Fully customizable builds on EAS Build](https://expo.dev/changelog/2023/08-10-custom-builds)
+- [Expo Proof of concept - expo-sqlite integration with CR-SQLite](https://expo.dev/changelog/2023/08-10-cr-sqlite)
+- [Expo Proof of concept - Expo CLI Dev Tools Plugins](https://expo.dev/changelog/2023/08-10-dev-tools-plugins)
+- [ADDING REACT NATIVE TO A COMPLEX APP](https://www.nearform.com/blog/adding-react-native-to-a-complex-app-part-1-planning/)
+- [Getting started with react native storybook](https://dev.to/dannyhw/getting-started-with-react-native-storybook-96c)
 - [Use Genymotion SaaS to run Maestro E2E on CI](https://dev.to/retyui/use-genymotion-saas-to-run-maestro-e2e-on-ci-14hm)
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, 7–8 September 2023) nous offre [-15% sur la conférence](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) avec le code "thisweekinreact15".
+- [The React Native Show Podcast #25 - Databases for mobile apps React Native & Realm](https://www.callstack.com/podcasts/databases-for-mobile-apps-react-native-realm)
 
 ---
 
@@ -95,7 +113,13 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [What Does It Mean for Web Browsers to Have a Baseline](https://thenewstack.io/what-does-it-mean-for-web-browsers-to-have-a-baseline/)
+- [Deprecating the unload event](https://developer.chrome.com/blog/deprecating-unload/)
+- [A Blog Post With Every HTML Element](https://www.patrickweaver.net/blog/a-blog-post-with-every-html-element/)
+- [Node.js's Config Hell Problem](https://deno.com/blog/node-config-hell)
+- [Announcing TypeScript 5.2 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-2-rc/)
+- [ViteConf 2023 - October 5th](https://viteconf.org/23/)
+- [Tobias Koppers on Turbopack vs Webpack](https://www.youtube.com/watch?v=Zwd_8Jy7b-c)
 
 ---
 
