--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
@@ -10,6 +10,8 @@ Salut à tous !
 
 Retire job section
 
+Instagram: https://thisweekinreact.com/ig
+
 RN EU cross-promo
 
 <Todo />
@@ -46,19 +48,29 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 ## ⚛️ React {#react}
 
 - 💸 [Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- [Natuerlich](https://github.com/coconut-xr/natuerlich) + https://twitter.com/coconut_xr/status/1689600319259357184
-- [On React Suspense’s throttling](https://andreigatej.dev/blog/on-react-suspense-throttling/) ???
-- [Introducing a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-07-31-a-new-rtl-lint-rule/) + [Building a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-08-01-building-a-new-lint-rule-for-rtl/)
-- [The simplest example to understand Server Actions in Next.js](https://scastiel.dev/simplest-example-server-actions-nextjs)
-- [How to Use Jotai and useTransition for Mutation](https://blog.axlight.com/posts/how-to-use-jotai-and-use-transition-for-mutation/)
-- [Coding the stars - an interactive constellation with Three.js and React Three Fiber](https://supabase.com/blog/interactive-constellation-threejs-react-three-fiber)
-- [Lifting Off with Astro](https://remotesynthesis.com/blog/lifting-off-with-astro/)
-- [React.dev - Using TypeScript](https://react.dev/learn/typescript): nouvelle page officielle de documentation.
-- [Things you forgot (or never knew) because of React](https://joshcollinsworth.com/blog/antiquated-react)
-- [Fantastic closures and how to find them in React](https://www.developerway.com/posts/fantastic-closures)
-- [Reakit - August 2023 update](https://newsletter.ariakit.org/p/all-things)
-- [Why I Stopped Using Next.js And Chose Astro Instead](https://www.youtube.com/watch?v=BoeZqPaYw9s)
-- [Responsive Framer Motion with Tailwind CSS](https://www.youtube.com/watch?v=xSuxsfn13xg)
+- 🧑‍🎓 [React.dev - Using TypeScript](https://react.dev/learn/typescript): nouvelle page officielle de documentation.
+- 💬 [Next.js RFC - Google Tag Manager and gtag in next/third-parties](https://github.com/vercel/next.js/discussions/53868): propose d'intégrer les analytics Google via un hook plutôt qu'un composant, avec support Web Worker. + https://twitter.com/hdjirdeh/status/1689709341241393152
+- 🐦 [Million.js Automatic Mode - Video trailer](https://twitter.com/aidenybai/status/1689773623827943424)
+- 📜 [Form Validation with React Hook Form](https://claritydev.net/blog/form-validation-react-hook-form)
+- 📜 [Node.js's Config Hell Problem](https://deno.com/blog/node-config-hell): Deno pointe du doigt les projets comme Next.js qui ont souvent des dizaines de fichiers de configuration.
+- 📜 [Supabase - Vercel Integration and Next.js App Router Support](https://supabase.com/blog/using-supabase-with-vercel)
+- 📜 [Can React Server Actions finally fix forms?](https://www.mux.com/blog/what-are-react-server-actions)
+- 📜 [On React Suspense’s throttling](https://andreigatej.dev/blog/on-react-suspense-throttling/) ???
+- 📜 [Introducing a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-07-31-a-new-rtl-lint-rule/) + [Building a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-08-01-building-a-new-lint-rule-for-rtl/)
+- 📜 [The simplest example to understand Server Actions in Next.js](https://scastiel.dev/simplest-example-server-actions-nextjs)
+- 📜 [How to Use Jotai and useTransition for Mutation](https://blog.axlight.com/posts/how-to-use-jotai-and-use-transition-for-mutation/)
+- 📜 [Coding the stars - an interactive constellation with Three.js and React Three Fiber](https://supabase.com/blog/interactive-constellation-threejs-react-three-fiber)
+- 📜 [Lifting Off with Astro](https://remotesynthesis.com/blog/lifting-off-with-astro/)
+- 📜 [Things you forgot (or never knew) because of React](https://joshcollinsworth.com/blog/antiquated-react)
+- 📜 [Fantastic closures and how to find them in React](https://www.developerway.com/posts/fantastic-closures)
+- 🎥 [Why I Stopped Using Next.js And Chose Astro Instead](https://www.youtube.com/watch?v=BoeZqPaYw9s)
+- 🎥 [Responsive Framer Motion with Tailwind CSS](https://www.youtube.com/watch?v=xSuxsfn13xg)
+- 🎥 [Dominik Dorfmeister: React Query With The App Router](https://www.youtube.com/watch?v=R4NHXrvwZWA)
+- 📦 [React Aria - August 9 Releases - HTML form submit/reset, DropZone, FileTrigger... ](https://react-spectrum.adobe.com/releases/2023-08-09.html)
+- 📦 [Natuerlich](https://github.com/coconut-xr/natuerlich) + https://twitter.com/coconut_xr/status/1689600319259357184
+- 📦 [Reakit - August 2023 update](https://newsletter.ariakit.org/p/all-things)
+- 📦 [Obsidiosaurus - Obsidian -> Docusaurus Converter](https://github.com/CIMSTA/obsidiosaurus)
+- 📦 [tw2panda - Easily migrate code from Tailwind to Panda CSS](https://github.com/astahmer/tw2panda)
 
   <SubscribeFormEmbed placement="middle" />
 
@@ -83,6 +95,10 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
+- Expo Apollo https://twitter.com/expo/status/1689623998957867008
+- Expo Ama: https://twitter.com/expo/status/1689720798746132481
+- [Reanimated on react-native-windows demo](https://twitter.com/piaskowyk/status/1689982162886430721)
+- [Half of the Top 20  Sports apps are powered by React Native!](https://twitter.com/Baconbrix/status/1690805340290301954)
 - [Exploring React Native's New Architecture: A Peek into the New Architecture](https://blog.devvivek.tech/exploring-react-natives-new-architecture-a-peek-into-the-new-architecture) + https://twitter.com/theviveksuthar
 - [Expo Preview - Fully customizable builds on EAS Build](https://expo.dev/changelog/2023/08-10-custom-builds)
 - [Expo Proof of concept - expo-sqlite integration with CR-SQLite](https://expo.dev/changelog/2023/08-10-cr-sqlite)
@@ -92,10 +108,13 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 - [Use Genymotion SaaS to run Maestro E2E on CI](https://dev.to/retyui/use-genymotion-saas-to-run-maestro-e2e-on-ci-14hm)
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, 7–8 September 2023) nous offre [-15% sur la conférence](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) avec le code "thisweekinreact15".
 - [The React Native Show Podcast #25 - Databases for mobile apps React Native & Realm](https://www.callstack.com/podcasts/databases-for-mobile-apps-react-native-realm)
+- [Async Components + use demo](https://twitter.com/SzymonRybczak/status/1691037156712599552)
 
 ---
 
 ## 🇫🇷 En français {#fr}
+
+- https://twitter.com/melvynxdev/status/1689902731551707136
 
 <Todo />
 
@@ -116,16 +135,23 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 - [What Does It Mean for Web Browsers to Have a Baseline](https://thenewstack.io/what-does-it-mean-for-web-browsers-to-have-a-baseline/)
 - [Deprecating the unload event](https://developer.chrome.com/blog/deprecating-unload/)
 - [A Blog Post With Every HTML Element](https://www.patrickweaver.net/blog/a-blog-post-with-every-html-element/)
-- [Node.js's Config Hell Problem](https://deno.com/blog/node-config-hell)
 - [Announcing TypeScript 5.2 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-2-rc/)
 - [ViteConf 2023 - October 5th](https://viteconf.org/23/)
-- [Tobias Koppers on Turbopack vs Webpack](https://www.youtube.com/watch?v=Zwd_8Jy7b-c)
+- [How layout position impacts three big web performance levers](https://performance.shopify.com/blogs/blog/how-layout-position-impacts-three-big-web-performance-levers)
+- [Zod 3.22 - readonly()](https://twitter.com/colinhacks/status/1691172205516984322)
+- [Gecko: Intent to Prototype: :has selector](https://twitter.com/intenttoship/status/1690045325539520523)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/astrodotbuild/status/1691104892578852865
+
+https://twitter.com/benawad/status/1691098852710051841
+
+https://twitter.com/adamwathan/status/1689580248730423296
+
+https://twitter.com/DanStepanov/status/1689511613026775040
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
