--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
@@ -47,14 +47,25 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-- 💸 [Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+[![Can React Server Actions finally fix forms?](/emails/issues/156/serveractions.jpg)](https://www.mux.com/blog/what-are-react-server-actions)
+
+[**Can React Server Actions finally fix forms?**](https://www.mux.com/blog/what-are-react-server-actions)
+
+Une bonne introduction aux Server Actions, feature React à venir, mais déjà intégrée en expérimental dans Next.js 13.4. Propose un petit tutoriel pour uploader une vidéo avec un titre. Les Server Actions peuvent retourner une réponse pour donner du feedback à l'utilisateur, mais on voit bien que ça n'est pas une DX idéale.
+
+Pour moi, il faudrait que les Server Actions supportent à 100% le progressive enhancement. Il faudrait sans doute introduire une API "flash" pour gérer un feedback sans JavaScript coté client, et qui existe sur de nombreux frameworks backend. Remix propose d'ailleurs ([`session.flash()`](https://remix.run/docs/en/main/utils/sessions#sessionflashkey-value)). Info liée qui pourrait vous intéresser: avec [`action.$$FORM_ACTION`](https://twitter.com/sebastienlorber/status/1689921046856474625) il est possible d'étendre le progressive enhancement de React.
+
+---
+
+---
+
+- 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 🧑‍🎓 [React.dev - Using TypeScript](https://react.dev/learn/typescript): nouvelle page officielle de documentation.
-- 💬 [Next.js RFC - Google Tag Manager and gtag in next/third-parties](https://github.com/vercel/next.js/discussions/53868): propose d'intégrer les analytics Google via un hook plutôt qu'un composant, avec support Web Worker. + https://twitter.com/hdjirdeh/status/1689709341241393152
+- 💬 [Next.js RFC - Google Tag Manager and gtag in next/third-parties](https://github.com/vercel/next.js/discussions/53868): propose d'intégrer les analytics Google via un hook plutôt qu'un composant, avec support Web Worker. https://twitter.com/hdjirdeh/status/1689709341241393152
 - 🐦 [Million.js Automatic Mode - Video trailer](https://twitter.com/aidenybai/status/1689773623827943424)
 - 📜 [Form Validation with React Hook Form](https://claritydev.net/blog/form-validation-react-hook-form)
 - 📜 [Node.js's Config Hell Problem](https://deno.com/blog/node-config-hell): Deno pointe du doigt les projets comme Next.js qui ont souvent des dizaines de fichiers de configuration.
-- 📜 [Supabase - Vercel Integration and Next.js App Router Support](https://supabase.com/blog/using-supabase-with-vercel)
-- 📜 [Can React Server Actions finally fix forms?](https://www.mux.com/blog/what-are-react-server-actions)
+- 📜 [Supabase - Vercel Integration and Next.js App Router Support](https://supabase.com/blog/using-supabase-with-vercel): intégration qui peut être intéressante à étudier. Des APIs aux noms intéressants comme `createClientComponentClient` 😅.
 - 📜 [On React Suspense’s throttling](https://andreigatej.dev/blog/on-react-suspense-throttling/) ???
 - 📜 [Introducing a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-07-31-a-new-rtl-lint-rule/) + [Building a new lint rule for React Testing Library](https://blog.testdouble.com/posts/2023-08-01-building-a-new-lint-rule-for-rtl/)
 - 📜 [The simplest example to understand Server Actions in Next.js](https://scastiel.dev/simplest-example-server-actions-nextjs)
@@ -67,7 +78,7 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 - 🎥 [Responsive Framer Motion with Tailwind CSS](https://www.youtube.com/watch?v=xSuxsfn13xg)
 - 🎥 [Dominik Dorfmeister: React Query With The App Router](https://www.youtube.com/watch?v=R4NHXrvwZWA)
 - 📦 [React Aria - August 9 Releases - HTML form submit/reset, DropZone, FileTrigger...](https://react-spectrum.adobe.com/releases/2023-08-09.html)
-- 📦 [Natuerlich](https://github.com/coconut-xr/natuerlich) + https://twitter.com/coconut_xr/status/1689600319259357184
+- 📦 [Natuerlich - Composable interactions for WebXR experiences - With React-Three-Fiber support](https://github.com/coconut-xr/natuerlich) + https://twitter.com/coconut_xr/status/1689600319259357184
 - 📦 [Reakit - August 2023 update](https://newsletter.ariakit.org/p/all-things)
 - 📦 [Obsidiosaurus - Obsidian -> Docusaurus Converter](https://github.com/CIMSTA/obsidiosaurus)
 - 📦 [tw2panda - Easily migrate code from Tailwind to Panda CSS](https://github.com/astahmer/tw2panda)
@@ -95,26 +106,25 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-- Expo Apollo https://twitter.com/expo/status/1689623998957867008
-- Expo Ama: https://twitter.com/expo/status/1689720798746132481
-- [Reanimated on react-native-windows demo](https://twitter.com/piaskowyk/status/1689982162886430721)
-- [Half of the Top 20  Sports apps are powered by React Native!](https://twitter.com/Baconbrix/status/1690805340290301954)
-- [Exploring React Native's New Architecture: A Peek into the New Architecture](https://blog.devvivek.tech/exploring-react-natives-new-architecture-a-peek-into-the-new-architecture) + https://twitter.com/theviveksuthar
-- [Expo Preview - Fully customizable builds on EAS Build](https://expo.dev/changelog/2023/08-10-custom-builds)
-- [Expo Proof of concept - expo-sqlite integration with CR-SQLite](https://expo.dev/changelog/2023/08-10-cr-sqlite)
-- [Expo Proof of concept - Expo CLI Dev Tools Plugins](https://expo.dev/changelog/2023/08-10-dev-tools-plugins)
-- [ADDING REACT NATIVE TO A COMPLEX APP](https://www.nearform.com/blog/adding-react-native-to-a-complex-app-part-1-planning/)
-- [Getting started with react native storybook](https://dev.to/dannyhw/getting-started-with-react-native-storybook-96c)
-- [Use Genymotion SaaS to run Maestro E2E on CI](https://dev.to/retyui/use-genymotion-saas-to-run-maestro-e2e-on-ci-14hm)
+- 👀 [Expo Preview - Fully customizable builds on EAS Build](https://expo.dev/changelog/2023/08-10-custom-builds): permet de customiser le build EAS avec un fichier Yaml et un système qui rappelle fortement GitHub Actions. On dirait que EAS utilise Fastlane sur le build iOS.
+- 👀 [Expo Proof of concept - expo-sqlite integration with CR-SQLite](https://expo.dev/changelog/2023/08-10-cr-sqlite): intégration SQLite et CRDT qui facilite la création d'apps mobiles local-first.
+- 👀 [Expo Proof of concept - Expo CLI Dev Tools Plugins](https://expo.dev/changelog/2023/08-10-dev-tools-plugins): Expo souhaite proposer un système de plugin pour créer des DevTools, et propose une demo avec les Apollo DevTools. Cela devrait à terme permettre de remplacer Flipper.
+- 🐦 [Reanimated on react-native-windows demo](https://twitter.com/piaskowyk/status/1689982162886430721)
+- 🐦 [Async Components + use() hook demo](https://twitter.com/SzymonRybczak/status/1691037156712599552)
+- 🐦 [Half of the Top 20 iOS Sports apps are powered by React Native](https://twitter.com/Baconbrix/status/1690805340290301954)
+- 📜 [Tale of a Web Developer Improving Startup Performance for a large React Native App](https://medium.com/engineering-udaan/reacting-to-change-tale-of-a-web-developer-improving-startup-performance-for-a-large-react-native-854f8a4850fd)
+- 📜 [Adding React-Native to a complex app - 4-part series](https://www.nearform.com/blog/adding-react-native-to-a-complex-app-part-1-planning/)
+- 📜 [Getting started with react native storybook](https://dev.to/dannyhw/getting-started-with-react-native-storybook-96c)
+- 📜 [Exploring React Native's New Architecture: A Peek into the New Architecture](https://blog.devvivek.tech/exploring-react-natives-new-architecture-a-peek-into-the-new-architecture)
+- 🎙️ [The React Native Show Podcast #25 - Databases for mobile apps React Native & Realm](https://www.callstack.com/podcasts/databases-for-mobile-apps-react-native-realm)
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, 7–8 September 2023) nous offre [-15% sur la conférence](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) avec le code "thisweekinreact15".
-- [The React Native Show Podcast #25 - Databases for mobile apps React Native & Realm](https://www.callstack.com/podcasts/databases-for-mobile-apps-react-native-realm)
-- [Async Components + use demo](https://twitter.com/SzymonRybczak/status/1691037156712599552)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-- https://twitter.com/melvynxdev/status/1689902731551707136
+- 📜 [Les modes d’authentification innovants](https://www.bam.tech/article/modes-authentification-innovants)
+- 🧵 [La meilleure lib CSS-in-JS?](https://twitter.com/melvynxdev/status/1689902731551707136)
 
 <Todo />
 
