--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/156/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /156
-title: "React Hebdo #156: ..."
+title: "React Hebdo #156: Server Actions, Stale Closures, React Falls Behind, Expo Builds, Suspense Throttling, React-Aria, Natuerlich, Obsidiosaurus, Expo-SQLite, Expo DevTools..."
 authors: [slorber]
 date: 08-15-2023
 unlisted: true
@@ -8,15 +8,13 @@ unlisted: true
 
 Salut à tous !
 
-Cette semaine, nous avons pas mal d'articles de la communauté React et React-Native, et les dernières annonces Expo Launch Party.
+Cette semaine, nous avons pas mal d'articles de la communauté React et React-Native, et les dernières annonces Expo Launch Party. Certains articles sont très longs, je n'ai pas eu le temps de tout lire.
 
-Certains articles sont vraiment très longs, je n'ai pas eu le temps de tous les lire 😅.
+📷 J'étais trop occupé à créer le [**compte Instagram**](https://www.instagram.com/thisweekinreact/) de la newsletter! Je compte y poster les news et tips React visuels, y compris les meilleurs memes que je n'ai pas pu inclure ici 🤭.
 
-J'étais aussi occupé à créer le [**compte Instagram 📷**](https://www.instagram.com/thisweekinreact/) de la newsletter 😄 N'hésitez pas à le suivre: je compte y poster les news et tips React visuels, y compris ma grosse collection de memes React que je n'ai pas pu mettre dans l'email.
+🧑 J'ai aussi retiré la section Jobs qui n'apportait pas grand-chose: je vais voir plus tard comment la réintégrer.
 
-J'ai aussi retiré la section Jobs qui n'apportait pas grand-chose: je vais voir plus tard comment la réintégrer.
-
-Pour les développeurs React-Native: la conférence [React Native EU](https://www.react-native.eu/) (Wrocław/Pologne, 7–8 September 2023) nous propose une réduction de [-15% sur les entrées](https://ti.to/react-native-eu/2023/discount/thisweekinreact15).
+👥 Pour les développeurs React-Native: la conférence [React Native EU](https://www.react-native.eu/) (Wrocław/Pologne, 7–8 September 2023) nous propose une réduction de [-15% sur les entrées](https://ti.to/react-native-eu/2023/discount/thisweekinreact15).
 
 <!-- truncate -->
 
