--- a/website/newsletter/156/index.mdx
+++ b/website/newsletter/156/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /156
-title: "This Week In React #156: ..."
+title: "This Week In React #156: Server Actions, Stale Closures, React Falls Behind, Expo Builds, Suspense Throttling, React-Aria, Natuerlich, Obsidiosaurus, Expo-SQLite, Expo DevTools..."
 authors: [slorber]
 date: 08-15-2023
 unlisted: true
@@ -8,15 +8,13 @@ unlisted: true
 
 Hi everyone!
 
-Salut à tous !
+This week, we've got many articles from the React and React-Native community, and the latest Expo Launch Party announcements. Some articles are very long, and I didn't have time to read them all.
 
-Cette semaine, nous avons pas mal d'articles de la communauté React et React-Native, et les dernières annonces Expo Launch Party. Certains articles sont très longs, je n'ai pas eu le temps de tout lire.
+📷 I've been too busy creating the newsletter's [**Instagram account**](https://www.instagram.com/thisweekinreact/)! I plan to post visual React news and tips there, including the best memes I couldn't include here 🤭.
 
-📷 J'étais trop occupé à créer le [**compte Instagram**](https://www.instagram.com/thisweekinreact/) de la newsletter! Je compte y poster les news et tips React visuels, y compris les meilleurs memes que je n'ai pas pu inclure ici 🤭.
+🧑 I've also removed the Jobs section, which didn't add much: I'll see later how to reintegrate it.
 
-🧑 J'ai aussi retiré la section Jobs qui n'apportait pas grand-chose: je vais voir plus tard comment la réintégrer.
-
-👥 Pour les développeurs React-Native: la conférence [React Native EU](https://www.react-native.eu/) (Wrocław/Pologne, 7–8 September 2023) nous propose une réduction de [-15% sur les entrées](https://ti.to/react-native-eu/2023/discount/thisweekinreact15).
+👥 For React-Native devs: [React Native EU](https://www.react-native.eu/) (Wrocław/Poland, 7-8 September) is offering us a [-15% discount on admissions](https://ti.to/react-native-eu/2023/discount/thisweekinreact15).
 
 <!-- truncate -->
 
